welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:6: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if(negative==false && a<0 && b<0)
               ^